--- a/app/src/main/res/layout/fragment_mi_fragmento.xml
+++ b/app/src/main/res/layout/fragment_mi_fragmento.xml
@@ -34,5 +34,18 @@
         android:clickable="true"
         android:focusable="true" />
 
+    <TextView
+        android:id="@+id/textViewHora"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Seleccionar hora"
+        android:textSize="16sp"
+        android:background="@android:drawable/editbox_background"
+        android:padding="12dp"
+        android:gravity="center_vertical"
+        android:layout_marginBottom="16dp"
+        android:clickable="true"
+        android:focusable="true" />
+
 </LinearLayout>
 
